<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="25dp"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="35sp"
        tools:text="What is your number?" />

    <TextView
        android:id="@+id/displayBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin40"
        android:gravity="center"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        tools:text="@string/screen" />

    <RelativeLayout
        android:id="@+id/imageContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/resetButton"
        android:layout_marginStart="@dimen/margin40"
        android:layout_marginEnd="@dimen/margin40"
        android:layout_marginBottom="@dimen/margin110">

        <ImageView
            android:id="@+id/prevButton"
            style="@style/imageStyle"
            android:layout_alignParentStart="true"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/guess_previous"
            app:srcCompat="@drawable/ic_baseline_arrow_left" />

        <ImageView
            android:id="@+id/check"
            style="@style/imageStyle"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_washed"
            android:contentDescription="@string/press_if_correct"
            app:srcCompat="@drawable/ic_baseline_check" />

        <ImageView
            android:id="@+id/nextButton"
            style="@style/imageStyle"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/guess_next"
            app:srcCompat="@drawable/ic_baseline_arrow_right" />

    </RelativeLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin40"
        android:enabled="false"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:padding="15dp"
        android:text="@string/reset"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700" />
</RelativeLayout>